fix css spacing

--- a/vite-react-electron/src/assets/css/JoinTeamPage.css
+++ b/vite-react-electron/src/assets/css/JoinTeamPage.css
@@ -5,23 +5,24 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-top: 120px;
+    padding: 0 2em;
+    height: 100%;
 }
 
 .join-team-title {
-    font-size: 48px;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0px;
-    height: 62px;
-    padding-bottom: 24px;
+    height: 10%;
+    padding-top: 1.125rem;
 }
 
 .join-team-desc {
-    font-size: 22px;
+    font-size: 1rem;
     font-weight: medium;
     margin: 0px;
-    height: 30px;
-    padding-bottom: 56px;
+    height: 20%;
+    padding: 2rem 0;
 }
 
 .join-team-input-container {
@@ -29,22 +30,22 @@
     flex-direction: row;
     border: 2px solid #cbd5e0;
     border-radius: 8px;
-    padding: 1px;
-    width: 342px;
-    height: 72px;
-    max-width: 342px;
+    padding: 0.0625rem;
+    width: 22rem;
+    height: 4.5rem;
+    max-width: 22rem;
 }
 
 .join-team-input-field {
     background-color: #fff;
     color: #dad9d9;
-    font-size: 30px;
+    font-size: 1.875rem;
     font-weight: bold;
     flex-grow: 2;
     border: none;
-    max-width: 230px;
-    max-height: 72px;
-    line-height: 32px;
+    max-width: 14.375rem;
+    max-height: 4.5rem;
+    line-height: 2rem;
     text-align: center;
 }
 
