--- a/vite-react-electron/src/assets/css/ViewTeamsPages.css
+++ b/vite-react-electron/src/assets/css/ViewTeamsPages.css
@@ -1,26 +1,27 @@
 .teams-dashboard {
+    box-sizing: border-box;
     background-color: #fff;
     color: #000;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-top: 120px;
+    padding: 0 2em;
+    height: 100%;
 }
 
 .teams-dashboard-title {
-    font-size: 48px;
     font-weight: bold;
     margin: 0px;
-    height: 62px;
-    padding-bottom: 24px;
+    height: 30%;
+    padding: 1.5rem 0;
 }
 
 .teams-dashboard-inner {
-    padding-bottom: 120px;
+    padding-bottom: 7.5rem;
 }
 
 .top-container-desc {
     font-size: 16px;
-    padding-bottom: 16px;
+    padding-bottom: 1rem;
 }
